--- a/part4/bloglist/package.json
+++ b/part4/bloglist/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "test": "echo \\\"Error: no test specified\\\" && exit 1",
-    "dev": "nodemon index.js"
+    "dev": "nodemon index.js",
+    "test": "jest --verbose"
   },
   "author": "Pauli Rinne",
   "license": "MIT",
@@ -17,6 +17,10 @@
     "mongoose": "^5.12.5"
   },
   "devDependencies": {
+    "jest": "^26.6.3",
     "nodemon": "^2.0.7"
+  },
+  "jest": {
+    "testEnvironment": "node"
   }
 }
