--- a/part4/bloglist/.env
+++ b/part4/bloglist/.env
@@ -1,3 +1,4 @@
 MONGODB_URI='mongodb+srv://databasemasterblaster:Fullstackopen2021@cluster0.5rq8c.mongodb.net/bloglist?retryWrites=true&w=majority'
 TEST_MONGODB_URI='mongodb+srv://databasemasterblaster:Fullstackopen2021@cluster0.5rq8c.mongodb.net/bloglist-test?retryWrites=true&w=majority'
 PORT=3003
+TOKENSECRET='much-hack-so-secret'
