--- a/part7/bloglist/bloglist-frontend/package.json
+++ b/part7/bloglist/bloglist-frontend/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@testing-library/user-event": "^12.6.3",
     "axios": "^0.21.1",
+    "polished": "^4.1.3",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
@@ -13,6 +14,7 @@
     "react-scripts": "4.0.1",
     "redux": "^4.1.0",
     "redux-thunk": "^2.3.0",
+    "styled-components": "^5.3.0",
     "uuid": "^8.3.2",
     "web-vitals": "^0.2.4"
   },
